json + search, good night

--- a/src/components/Customers/Customers.sass
+++ b/src/components/Customers/Customers.sass
@@ -1,5 +1,5 @@
 .customers
-  width: 70%
+  width: 100%
   padding: 100px calc(18% + 72px)
 
   h1
@@ -10,3 +10,99 @@
     line-height: normal
     letter-spacing: -0.37px
     color: #000000
+  
+  .all
+    width: 75%
+    min-width: 777px
+    background-color: #ffffff
+
+    .head
+      font-size: 10px
+      font-weight: bold
+      background: #e2e7ee
+      display: flex
+      border-radius: 4px
+      border: solid 1px #e2e7ee
+      background-color: #f1f4f8
+      padding: 9px  20px
+      letter-spacing: 0.6px
+      color: #516173
+
+      p
+        margin: 0px
+
+      .right
+        width: 60%
+        display: flex
+        margin-left: auto
+        justify-content: space-between
+        align-items: center
+
+        p
+          text-align: center
+          width: 55px
+
+    .customer
+      display: flex
+      align-items: center
+      font-size: 13px
+      color: #242b39
+      padding: 9px  20px
+
+      .companyName
+        width: 20%
+        display: flex
+        align-items: center
+
+        .img-inline
+          display: inline
+          width: 24px
+          height: 9px
+          margin: 0.5em
+          padding: 0
+          vertical-align: baseline
+
+      button
+        width: 77px
+        height: 25px
+        font-weight: bold
+        padding: 5px 8px 4px
+        border-radius: 4px
+        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05)
+        border: solid 1px #e2e7ee
+        background-color: #ffffff
+        color: #2f3748
+
+      .right
+        display: flex
+        align-items: center
+        font-size: 13px
+        color: #242b39
+        padding: 9px  20px
+        width: 60%
+        margin-left: auto
+        justify-content: space-between
+        align-items: center
+
+        p
+          margin: 0
+          text-align: center
+          width: 55px 
+
+        .status
+          text-transform: uppercase
+          width: 53px
+          height: 12px
+          display: flex
+          align-items: center
+          justify-content: center
+          font-size: 10px
+          border-radius: 4px
+          background-color: #cffbe9
+          color: #21985e
+          font-weight: 500
+          letter-spacing: 1px
+
+          p
+            height: auto
+            margin: 0px
