--- a/src/components/Customers/Customers.sass
+++ b/src/components/Customers/Customers.sass
@@ -1,6 +1,6 @@
 .customers
   width: 100%
-  padding: 100px calc(18% + 72px)
+  padding: 100px 4% 0 22%
 
   h1
     font-size: 31px
@@ -12,9 +12,13 @@
     color: #000000
   
   .all
-    width: 75%
-    min-width: 777px
+    width: 100%
     background-color: #ffffff
+    border-radius: 4px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05)
+    border: solid 1px #e2e7ee
+  
+
 
     .head
       font-size: 10px
@@ -22,17 +26,18 @@
       background: #e2e7ee
       display: flex
       border-radius: 4px
-      border: solid 1px #e2e7ee
+      border-bottom: solid 1px #e2e7ee
       background-color: #f1f4f8
       padding: 9px  20px
       letter-spacing: 0.6px
       color: #516173
+      margin-bottom: 10px
 
       p
         margin: 0px
 
       .right
-        width: 60%
+        width: 45%
         display: flex
         margin-left: auto
         justify-content: space-between
@@ -41,48 +46,96 @@
         p
           text-align: center
           width: 55px
+        
+        .size
+          text-align: right
+          &:hover
+            cursor: pointer
+          img
+            margin: 0 0 -1px 3px
+
 
     .customer
       display: flex
       align-items: center
       font-size: 13px
       color: #242b39
-      padding: 9px  20px
+      padding: 3px  20px
+      &:hover
+        background-color: #eff2f7
 
       .companyName
-        width: 20%
+        width: 28%
+        height: 35px
         display: flex
         align-items: center
 
-        .img-inline
-          display: inline
-          width: 24px
-          height: 9px
-          margin: 0.5em
-          padding: 0
-          vertical-align: baseline
+        .logo
+          display: flex
+          align-items: center
+          justify-content: center
+          width: 30px
+          height: 30px
+          margin-right: 5px
 
-      button
-        width: 77px
-        height: 25px
-        font-weight: bold
-        padding: 5px 8px 4px
-        border-radius: 4px
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05)
-        border: solid 1px #e2e7ee
-        background-color: #ffffff
-        color: #2f3748
+          .img-inline
+            width: fit-content
+            max-width: 24px
+            display: inline
+            margin: 0
+            padding: 0
+            vertical-align: baseline
+
+      .dropdown
+        position: relative
+        button
+          width: 77px
+          height: 25px
+          font-weight: bold
+          padding: 5px 8px 4px
+          border-radius: 4px
+          box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05)
+          border: solid 1px #e2e7ee
+          background-color: #ffffff
+          color: #2f3748
+          cursor: pointer
+          position: relative
+          &:focus
+            outline: none
+
+        ul
+          width: 234px
+          display: block
+          position: absolute
+          background-color: #f9f9f9
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
+          z-index: 1
+          list-style-type: none
+          padding: 0
+
+          li
+            vertical-align: baseline
+            text-decoration: none
+            padding: 10px 3px 10px 14px
+            font-size: 13px
+            font-weight: 500
+            font-stretch: normal
+            font-style: normal
+            line-height: 1.62
+            letter-spacing: normal
+            color: #2f3748
+            &:hover
+              background-color: #f1f4f8
+              cursor: pointer
 
       .right
         display: flex
         align-items: center
         font-size: 13px
         color: #242b39
-        padding: 9px  20px
-        width: 60%
+        width: 45%
         margin-left: auto
         justify-content: space-between
-        align-items: center
 
         p
           margin: 0
@@ -91,18 +144,10 @@
 
         .status
           text-transform: uppercase
-          width: 53px
-          height: 12px
-          display: flex
-          align-items: center
-          justify-content: center
-          font-size: 10px
           border-radius: 4px
           background-color: #cffbe9
-          color: #21985e
+          font-size: 10px
           font-weight: 500
+          line-height: 1.6
           letter-spacing: 1px
-
-          p
-            height: auto
-            margin: 0px
+          color: #21985e
