--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -2,7 +2,7 @@
   display: flex
   flex-direction: column
   height: 100%
-  width: 18%
+  width: 16%
   position: fixed
   z-index: 1
   top: 0
@@ -10,16 +10,22 @@
   overflow-x: hidden
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15)
   background-color: #ffffff
-  padding-top: 100px
+  padding: 100px 2% 0 1%
+  @media (max-width: 1200px)
+    padding: 100px 0 0 0px
+  
 
   p
+    margin-left: 5%
     font-size: 10px
 		letter-spacing: 0.6px
 		color: #9fa7bb
 
   a
-    width: 80%
-    padding: 11px 7px 12px 16px
+    width: 100%
+    display: flex
+    align-items: center
+    padding: 11px 7px 12px 10px
     border-radius: 8px
     margin-bottom: 10px
     font-size: 15px
@@ -30,3 +36,40 @@
     letter-spacing: normal
     color: #242b39
     text-decoration: none
+    @media (max-width: 1200px)
+      width: 100%
+      font-size: 14px
+
+    img
+      margin-left: 1%
+      margin-right: 12px
+      @media (max-width: 1200px)
+        display: none
+
+  .active
+    border-radius: 8px
+    background-color: #f1f4f8
+    @media (max-width: 1200px)
+      border-radius: 0px
+
+/*.companyName
+        width: 28%
+        height: 35px
+        display: flex
+        align-items: center
+
+        .logo
+          display: flex
+          align-items: center
+          justify-content: center
+          width: 30px
+          height: 30px
+          margin-right: 5px
+
+          .img-inline
+            width: fit-content
+            max-width: 24px
+            display: inline
+            margin: 0
+            padding: 0
+            vertical-align: baseline
