--- a/src/components/Customers/Customers.sass
+++ b/src/components/Customers/Customers.sass
@@ -4,7 +4,7 @@
 
   h1
     font-size: 31px
-    font-weight: normal
+    font-weight: 500
     font-stretch: normal
     font-style: normal
     line-height: normal
